--- a/sfdc-green-mountain-group.html
+++ b/sfdc-green-mountain-group.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-  <h3>Using CSS to style an HTML Form</h3>
+  <h3>Fill out this form to request problems or errors etc. </h3>
 
   <div>
     <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
